Fixed background possition on mobile

--- a/_sass/work-with-us.scss
+++ b/_sass/work-with-us.scss
@@ -22,10 +22,6 @@
     }
 }
 
-.main-header p {
-    max-width: 38%;
-}
-
 article {
   @include paragraph-content-spacer;
   @include spacer-with-underline;
@@ -37,4 +33,16 @@ article {
     border: none;
     margin-bottom: 0;
   }
+}
+
+@media (max-width: $max-width-md) {
+   .main-header {
+      background-position: 53%;
+  }
+}
+
+@media (max-width: $max-width-xs) {
+    .main-header h2 {
+	max-width: 80%;
+    }
 }
